added loading img and menu icon from old repo, trying to make it show preview

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <ul>
                   <li><a href="https://www.are.na/quinn-bonney/channels">are.na</a></li>
                   <li><a href="https://www.instagram.com/quinnsartpalooza">Instagram</a></li>
-                  <li><a href="mailto:bonneyq1@newpaltz.edu">Email</a></li>
+                  <li><a href="mailto:quinnnbonney777@gmail.com">Email</a></li>
                   <li><a href="https://github.com/bonneyq1">Github</a></li>
                   <li>
                     <p>👋</p>
