changed all png and jpeg to .webp files and updated the names in files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
      <!-- Loading Screen -->
     <div id="loading-screen">
-        <img src="loading-image.png" alt="Loading Image" id="loading-image">
+        <img src="loading-image.webp" alt="Loading Image" id="loading-image">
     </div>
 
     <!-- Main Content -->
@@ -23,10 +23,10 @@
         <!-- Title Drawing -->
         <header>
             <div class="header-container">
-                <img src="home_png/title_drawing.png" alt="Quinn's Artpalooza" id="title-drawing">
+                <img src="home_webp/title_drawing.webp" alt="Quinn's Artpalooza" id="title-drawing">
 
                 <!-- Menu Icon (Visible on small screens) -->
-                <img id="menu-icon" src="menu-icon.png" alt="Menu Icon">
+                <img id="menu-icon" src="menu-icon.webp" alt="Menu Icon">
 
                 <!-- Navigation Menu -->
                     <div class="nav-container">
@@ -34,25 +34,25 @@
                         <ul id="menu-tabs">
                             <li>
                                 <a href="page1_graphic_design.html" class="active">
-                                    <img src="home_png/graphic_design_scrap.png" alt="Graphic Design Scrap">
+                                    <img src="home_webp/graphic_design_scrap.webp" alt="Graphic Design Scrap">
                                     <span>Graphic Design</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="page2_photography.html" class="active">
-                                    <img src="home_png/photography_scrap.png" alt="Photography Scrap">
+                                    <img src="home_webp/photography_scrap.webp" alt="Photography Scrap">
                                     <span>Photography</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="page3_otherstuff.html" class="active">
-                                    <img src="home_png/other_stuff_scrap.png" alt="Other Stuff Scrap">
+                                    <img src="home_webp/other_stuff_scrap.webp" alt="Other Stuff Scrap">
                                     <span>Other Stuff</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="page4_aboutme.html" class="active">
-                                    <img src="home_png/about_me_scrap.png" alt="About Me Scrap">
+                                    <img src="home_webp/about_me_scrap.webp" alt="About Me Scrap">
                                     <span>About Me</span>
                                 </a>
                             </li>
@@ -66,23 +66,23 @@
         <main>
         <div class="design-container">
             <div class="scrapbook-bg1 scrapbook-item1 scrapbook-item">
-                    <img src="home_png/main_imgs/updates.png" alt="Updates with heart drawing"/>
+                    <img src="home_webp/main_imgs/updates.webp" alt="Updates with heart drawing"/>
                 </a>
             </div>
             <div class="scrapbook-bg2 scrapbook-item2 scrapbook-item ">
                 <a href="https://linktr.ee/quinnbonney">
-                    <img src="home_png/main_imgs/mylinktree.png" alt="My linktree">
+                    <img src="home_webp/main_imgs/mylinktree.webp" alt="My linktree">
                     <span class="item-text">a linktree to my summer research project<br>on academic journal design</span>
                 </a>
             </div>
             <div class="scrapbook-bg3 scrapbook-item3 scrapbook-item ">
-                    <img src="home_png/main_imgs/ireland.jpg" alt="Image of sheep in Ireland">
+                    <img src="home_webp/main_imgs/ireland.webp" alt="Image of sheep in Ireland">
                     <span class="item-text">I went on a family trip<br>to Ireland</span>
             </div>
             
             <div class="scrapbook-bg4 scrapbook-item4 scrapbook-item">
                 <a href="https://www.are.na/quinn-bonney">
-                    <img src="home_png/main_imgs/myarena.png" alt="My are.na homepage"/>
+                    <img src="home_webp/main_imgs/myarena.webp" alt="My are.na homepage"/>
                     <span class="item-text">here is my are.na page<br>I am constantly messing with...</span>
                 </a>
             </div>
